--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </nav>
 
     <!-- Banner Slider -->
-    <section class="banner-section">
+    <section class="banner-section active">
         <div class="banner-slider">
             <div class="banner-slide active" data-slide="0">
                 <div class="banner-overlay"></div>
@@ -119,68 +119,179 @@
         </section>
 
 
-        <!-- Profile Section: User Info -->
+        <!-- Profile Section: Menu and Account Info -->
         <section id="profile-section" class="tab-section">
             <div class="section-content">
-                <div class="profile-container">
-                    <!-- Profile Header with Image -->
-                    <div class="profile-header-card">
-                        <div class="profile-image-wrapper">
-                            <div class="profile-image" id="profile-image">
-                                <i class="fas fa-user profile-image-placeholder"></i>
-                            </div>
-                            <button class="profile-image-upload" type="button" aria-label="تغيير الصورة">
-                                <i class="fas fa-camera upload-icon"></i>
-                            </button>
-                        </div>
+                <!-- Profile Menu View -->
+                <div id="profile-menu-view" class="profile-view active">
+                    <div class="profile-container">
+                        <!-- Profile Header Component will be rendered here -->
+                        <div id="profile-header-container"></div>
+
+                        <!-- Menu Sections will be rendered here -->
+                        <div id="profile-menu-sections"></div>
                     </div>
+                </div>
 
-                    <!-- Profile Information Form -->
-                    <div class="profile-info-card">
-                        <h2 class="profile-card-title">معلوماتي الشخصية</h2>
+                <!-- Account Info View -->
+                <div id="profile-account-info-view" class="profile-view">
+                    <div class="account-info-container">
 
-                        <div class="profile-form">
-                            <!-- Full Name Field -->
-                            <div class="form-group">
-                                <label for="profile-fullname" class="form-label">الاسم الكامل</label>
-                                <div class="input-wrapper">
-                                    <i data-lucide="user" class="input-icon"></i>
-                                    <input type="text" id="profile-fullname" class="form-input profile-fullname-input"
-                                        placeholder="أدخل الاسم الكامل" dir="rtl">
-                                </div>
-                            </div>
-
-                            <!-- Phone Number Field -->
-                            <div class="form-group">
-                                <label for="profile-phone" class="form-label">رقم الجوال</label>
-                                <div class="input-wrapper">
-                                    <i data-lucide="phone" class="input-icon"></i>
-                                    <input type="tel" id="profile-phone" class="form-input"
-                                        placeholder="+966 50 000 0000" dir="ltr">
-                                </div>
-                            </div>
-
-                            <!-- Email Field -->
-                            <div class="form-group">
-                                <label for="profile-email" class="form-label">البريد الإلكتروني</label>
-                                <div class="input-wrapper">
-                                    <i data-lucide="mail" class="input-icon"></i>
-                                    <input type="email" id="profile-email" class="form-input"
-                                        placeholder="example@email.com" dir="ltr">
-                                </div>
-                            </div>
-
-                            <!-- National ID Field with Hide/Show Toggle -->
-                            <div class="form-group">
-                                <label for="profile-national-id" class="form-label">الهوية الوطنية</label>
-                                <div class="input-wrapper with-toggle">
-                                    <i data-lucide="id-card" class="input-icon"></i>
-                                    <input type="password" id="profile-national-id" class="form-input"
-                                        placeholder="10 أرقام" dir="ltr" maxlength="10">
-                                    <button type="button" class="toggle-visibility-btn" id="toggle-national-id"
-                                        aria-label="إظهار/إخفاء الهوية الوطنية">
-                                        <i data-lucide="eye" class="eye-icon" id="eye-icon"></i>
+                        <!-- Wrapper for tabs and tab content -->
+                        <div class="account-tabs-wrapper">
+                            <!-- Tabs Navigation -->
+                            <div class="account-tabs">
+                                <div class="account-tabs-header">
+                                    <button class="back-to-profile-btn" id="back-to-profile-btn"
+                                        aria-label="العودة إلى القائمة">
+                                        <i data-lucide="arrow-right" class="back-icon"></i>
                                     </button>
+                                    <h2 class="account-tabs-title">معلومات الحساب</h2>
+                                </div>
+                                <button class="account-tab active" data-tab="basic-data">
+                                    <i data-lucide="user" class="account-tab-icon"></i>
+                                    <span class="tab-text">البيانات الأساسية</span>
+                                    <i data-lucide="chevron-left" class="account-tab-arrow"></i>
+                                </button>
+                                <button class="account-tab" data-tab="contact-info">
+                                    <i data-lucide="phone" class="account-tab-icon"></i>
+                                    <span class="tab-text">معلومات التواصل</span>
+                                    <i data-lucide="chevron-left" class="account-tab-arrow"></i>
+                                </button>
+                                <button class="account-tab" data-tab="addresses">
+                                    <i data-lucide="map-pin" class="account-tab-icon"></i>
+                                    <span class="tab-text">عناويني</span>
+                                    <i data-lucide="chevron-left" class="account-tab-arrow"></i>
+                                </button>
+                            </div>
+
+                            <!-- Tab Content Views -->
+                            <div class="account-tab-content">
+                                <!-- البيانات الأساسية View -->
+                                <div id="basic-data-view" class="tab-view">
+                                    <div class="account-card">
+                                        <div class="card-header">
+                                            <button class="back-to-tabs-btn" data-back="tabs">
+                                                <i data-lucide="arrow-right" class="back-icon"></i>
+                                            </button>
+                                            <h2 class="card-title">البيانات الأساسية</h2>
+                                        </div>
+
+                                        <div class="card-body">
+                                            <!-- Full Name -->
+                                            <div class="info-row">
+                                                <div class="info-label">
+                                                    <i data-lucide="user" class="info-icon"></i>
+                                                    <span>الاسم الكامل</span>
+                                                </div>
+                                                <div class="info-value">عبدالله محمد</div>
+                                            </div>
+
+                                            <!-- National ID -->
+                                            <div class="info-row">
+                                                <div class="info-label">
+                                                    <i data-lucide="id-card" class="info-icon"></i>
+                                                    <span>الهوية الوطنية</span>
+                                                </div>
+                                                <div class="info-value">1029384756</div>
+                                            </div>
+
+                                            <!-- Date of Birth -->
+                                            <div class="info-row">
+                                                <div class="info-label">
+                                                    <i data-lucide="calendar" class="info-icon"></i>
+                                                    <span>تاريخ الميلاد</span>
+                                                </div>
+                                                <div class="info-value">01/01/1990</div>
+                                            </div>
+
+                                            <!-- Gender -->
+                                            <div class="info-row">
+                                                <div class="info-label">
+                                                    <i data-lucide="user" class="info-icon"></i>
+                                                    <span>الجنس</span>
+                                                </div>
+                                                <div class="info-value">ذكر</div>
+                                            </div>
+
+                                            <!-- Nationality -->
+                                            <div class="info-row">
+                                                <div class="info-label">
+                                                    <i data-lucide="flag" class="info-icon"></i>
+                                                    <span>الجنسية</span>
+                                                </div>
+                                                <div class="info-value">سعودي</div>
+                                            </div>
+
+                                            <!-- Edit Button -->
+                                            <button class="edit-btn">
+                                                <i data-lucide="edit" class="edit-icon"></i>
+                                                <span>تعديل البيانات</span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- معلومات التواصل View -->
+                                <div id="contact-info-view" class="tab-view">
+                                    <div class="account-card">
+                                        <div class="card-header">
+                                            <button class="back-to-tabs-btn" data-back="tabs">
+                                                <i data-lucide="arrow-right" class="back-icon"></i>
+                                            </button>
+                                            <h2 class="card-title">معلومات التواصل</h2>
+                                        </div>
+
+                                        <div class="card-body">
+                                            <!-- Email -->
+                                            <div class="form-group">
+                                                <label for="contact-email" class="form-label">
+                                                    <i data-lucide="mail" class="form-label-icon"></i>
+                                                    <span>البريد الإلكتروني</span>
+                                                </label>
+                                                <div class="form-value">abdullah@propertyapp.com</div>
+                                            </div>
+
+                                            <!-- Phone -->
+                                            <div class="form-group">
+                                                <label for="contact-phone" class="form-label">
+                                                    <i data-lucide="phone" class="form-label-icon"></i>
+                                                    <span>رقم الجوال</span>
+                                                </label>
+                                                <div class="form-value">0557894321</div>
+                                            </div>
+
+                                            <!-- Edit Button -->
+                                            <button class="edit-btn">
+                                                <i data-lucide="edit" class="edit-icon"></i>
+                                                <span>تعديل البيانات</span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- عناويني View -->
+                                <div id="addresses-view" class="tab-view">
+                                    <div class="account-card">
+                                        <div class="card-header">
+                                            <button class="back-to-tabs-btn" data-back="tabs">
+                                                <i data-lucide="arrow-right" class="back-icon"></i>
+                                            </button>
+                                            <h2 class="card-title">عناويني</h2>
+                                        </div>
+
+                                        <div class="card-body">
+                                            <!-- Empty State -->
+                                            <div class="empty-state">
+                                                <i data-lucide="map-pin" class="empty-icon"></i>
+                                                <p class="empty-text">لا توجد عناوين محفوظة</p>
+                                                <button class="add-address-btn">
+                                                    <i data-lucide="plus" class="add-icon"></i>
+                                                    <span>إضافة عنوان جديد</span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
