--- a/index.html
+++ b/index.html
@@ -245,21 +245,21 @@
                                     <div class="account-card">
                                         <div class="card-body">
                                             <!-- Email -->
-                                            <div class="form-group">
-                                                <label for="contact-email" class="form-label">
-                                                    <i data-lucide="mail" class="form-label-icon"></i>
+                                            <div class="info-row">
+                                                <div class="info-label">
+                                                    <i data-lucide="mail" class="info-icon"></i>
                                                     <span>البريد الإلكتروني</span>
-                                                </label>
-                                                <div class="form-value">abdullah@propertyapp.com</div>
+                                                </div>
+                                                <div class="info-value">abdullahmakingbos@propertyapp.com</div>
                                             </div>
 
                                             <!-- Phone -->
-                                            <div class="form-group">
-                                                <label for="contact-phone" class="form-label">
-                                                    <i data-lucide="phone" class="form-label-icon"></i>
+                                            <div class="info-row">
+                                                <div class="info-label">
+                                                    <i data-lucide="phone" class="info-icon"></i>
                                                     <span>رقم الجوال</span>
-                                                </label>
-                                                <div class="form-value">0557894321</div>
+                                                </div>
+                                                <div class="info-value">0557894321</div>
                                             </div>
 
                                             <!-- Edit Button -->
