--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="home.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="home.js" defer></script>
+    <script src="user-acc-data.js" defer></script>
 </head>
 
 <body>
