--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                 <i data-lucide="tag" class="top-nav-icon"></i>
                 <span class="top-nav-label">للبيع</span>
             </a>
-            <button class="add-property-btn" aria-label="إضافة عقار">
-                <i data-lucide="plus" class="add-icon"></i>
-            </button>
             <a href="#" class="top-nav-item" data-section="rent-section">
                 <i data-lucide="key" class="top-nav-icon"></i>
                 <span class="top-nav-label">للإيجار</span>
@@ -47,6 +44,10 @@
             <a href="#" class="top-nav-item" data-section="auction-section">
                 <i data-lucide="hammer" class="top-nav-icon"></i>
                 <span class="top-nav-label">المزادات</span>
+            </a>
+            <a href="#" class="top-nav-item" data-section="my-actions-section">
+                <i data-lucide="chart-line" class="top-nav-icon"></i>
+                <span class="top-nav-label">مشاركاتي</span>
             </a>
         </div>
     </nav>
@@ -305,20 +306,21 @@
             <i data-lucide="home" class="nav-icon"></i>
             <span class="nav-label">الرئيسية</span>
         </a>
+        <a href="#" class="nav-item" data-section="auction-section">
+            <i data-lucide="hammer" class="nav-icon"></i>
+            <span class="nav-label">المزادات</span>
+        </a>
         <a href="#" class="nav-item" data-section="sell-section">
             <i data-lucide="tag" class="nav-icon"></i>
             <span class="nav-label">للبيع</span>
         </a>
-        <button class="add-property-btn" aria-label="إضافة عقار">
-            <i data-lucide="plus" class="add-icon"></i>
-        </button>
         <a href="#" class="nav-item" data-section="rent-section">
             <i data-lucide="key" class="nav-icon"></i>
             <span class="nav-label">للإيجار</span>
         </a>
-        <a href="#" class="nav-item" data-section="auction-section">
-            <i data-lucide="hammer" class="nav-icon"></i>
-            <span class="nav-label">المزادات</span>
+        <a href="#" class="nav-item" data-section="my-actions-section">
+            <i data-lucide="chart-line" class="nav-icon"></i>
+            <span class="nav-label">مشاركاتي</span>
         </a>
     </nav>
 
