--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="home.js" defer></script>
     <script src="user-acc-data.js" defer></script>
     <script src="my-actions-section.js" defer></script>
+    <script src="user-settings.js" defer></script>
 </head>
 
 <body>
@@ -288,6 +289,77 @@
                                                 </button>
                                             </div>
                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Settings View -->
+                <div id="profile-settings-view" class="profile-view">
+                    <div class="settings-container">
+                        <!-- Settings Header -->
+                        <div class="account-tabs-header" id="settings-header">
+                            <button class="back-btn" id="settings-back-btn" aria-label="رجوع">
+                                <i data-lucide="arrow-right" class="back-icon"></i>
+                            </button>
+                            <h2 class="account-tabs-title">الإعدادات</h2>
+                        </div>
+
+                        <!-- Settings Content -->
+                        <div class="settings-content">
+                            <!-- Description Text -->
+                            <p class="settings-description">
+                                تتيح لك صفحة الإعدادات تخصيص حسابك. يمكنك تعديل معلوماتك، تغيير طريقة ظهورك، وإدارة
+                                تفضيلات الخصوصية.
+                            </p>
+
+                            <!-- Section 1: Appearance in Auctions -->
+                            <div class="settings-section">
+                                <h3 class="settings-section-title">ظهورك في المزادات</h3>
+                                <div class="settings-card">
+                                    <label class="radio-option">
+                                        <input type="radio" name="auction-display" value="last-four-id" checked>
+                                        <span class="radio-label">آخر 4 أرقام من الهوية</span>
+                                        <span class="radio-checkmark"></span>
+                                    </label>
+                                    <label class="radio-option">
+                                        <input type="radio" name="auction-display" value="full-name">
+                                        <span class="radio-label">الاسم الكامل</span>
+                                        <span class="radio-checkmark"></span>
+                                    </label>
+                                    <label class="radio-option">
+                                        <input type="radio" name="auction-display" value="bidder-number">
+                                        <span class="radio-label">رقم المزايد في المزاد</span>
+                                        <span class="radio-checkmark"></span>
+                                    </label>
+                                </div>
+                            </div>
+
+                            <!-- Section 2: Notifications -->
+                            <div class="settings-section">
+                                <h3 class="settings-section-title">الإشعارات</h3>
+                                <div class="settings-card">
+                                    <div class="toggle-option">
+                                        <div class="toggle-label-wrapper">
+                                            <i data-lucide="bell" class="toggle-icon"></i>
+                                            <span class="toggle-label">اشعارات المزايدات</span>
+                                        </div>
+                                        <label class="toggle-switch">
+                                            <input type="checkbox" checked>
+                                            <span class="toggle-slider"></span>
+                                        </label>
+                                    </div>
+                                    <div class="toggle-option">
+                                        <div class="toggle-label-wrapper">
+                                            <i data-lucide="alert-circle" class="toggle-icon"></i>
+                                            <span class="toggle-label">اشعارات التنبيهات</span>
+                                        </div>
+                                        <label class="toggle-switch">
+                                            <input type="checkbox" checked>
+                                            <span class="toggle-slider"></span>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
