--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                             <!-- Gender -->
                                             <div class="info-row">
                                                 <div class="info-label">
-                                                    <i data-lucide="user" class="info-icon"></i>
+                                                    <i data-lucide="fingerprint-pattern" class="info-icon"></i>
                                                     <span>الجنس</span>
                                                 </div>
                                                 <div class="info-value">ذكر</div>
@@ -299,6 +299,8 @@
                 <!-- Settings View -->
                 <div id="profile-settings-view" class="profile-view">
                     <div class="settings-container">
+
+
                         <!-- Settings Header -->
                         <div class="account-tabs-header" id="settings-header">
                             <button class="back-btn" id="settings-back-btn" aria-label="رجوع">
@@ -306,6 +308,7 @@
                             </button>
                             <h2 class="account-tabs-title">الإعدادات</h2>
                         </div>
+
 
                         <!-- Settings Content -->
                         <div class="settings-content">
