--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <script src="https://unpkg.com/lucide@latest"></script>
-    <script src="home.js" defer></script>
-    <script src="user-acc-data.js" defer></script>
-    <script src="my-actions-section.js" defer></script>
-    <script src="user-settings.js" defer></script>
+
+
+    <!-- This file loads all other JavaScript modules from the 'script' folder -->
+    <script src="script.js" defer></script>
+
 </head>
 
 <body>
