--- a/index.html
+++ b/index.html
@@ -370,6 +370,27 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Favorites View -->
+                <div id="profile-favorites-view" class="profile-view">
+                    <div class="favorites-container">
+                        <!-- Favorites Header -->
+                        <div class="account-tabs-header" id="favorites-header">
+                            <button class="back-btn" id="favorites-back-btn" aria-label="رجوع">
+                                <i data-lucide="arrow-right" class="back-icon"></i>
+                            </button>
+                            <h2 class="account-tabs-title">المفضلة</h2>
+                        </div>
+
+                        <!-- Favorites Content -->
+                        <div class="favorites-content">
+                            <div class="favorites-empty-state">
+                                <i data-lucide="heart" class="favorites-icon"></i>
+                                <p class="favorites-empty-text">لم يتم العثور على مزادات</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
