--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 
 
     <div id="app-content">
+
+        
         <!-- Home Section: Featured Properties -->
         <section id="home-section" class="tab-section active">
             <div class="section-content">
@@ -126,6 +128,10 @@
         </section>
 
 
+
+
+
+
         <!-- Profile Section: Menu and Account Info -->
         <section id="profile-section" class="tab-section">
             <!-- Headers will be dynamically inserted here -->
@@ -143,293 +149,25 @@
                     </div>
                 </div>
 
-                <!-- Account Info View -->
-                <div id="profile-account-info-view" class="profile-view">
-                    <div class="account-info-container">
+                <!-- Account Info View (rendered by user-acc-data.js) -->
+                <div id="profile-account-info-view" class="profile-view"></div>
 
-                        <!-- Wrapper for tabs and tab content -->
-                        <div class="account-tabs-wrapper">
-                            <!-- Tabs Navigation -->
-                            <div class="account-tabs">
-                                <button class="account-tab active" data-tab="basic-data">
-                                    <i data-lucide="user" class="account-tab-icon"></i>
-                                    <span class="tab-text">البيانات الأساسية</span>
-                                    <i data-lucide="chevron-left" class="account-tab-arrow"></i>
-                                </button>
-                                <button class="account-tab" data-tab="contact-info">
-                                    <i data-lucide="phone" class="account-tab-icon"></i>
-                                    <span class="tab-text">معلومات التواصل</span>
-                                    <i data-lucide="chevron-left" class="account-tab-arrow"></i>
-                                </button>
-                                <button class="account-tab" data-tab="addresses">
-                                    <i data-lucide="map-pin" class="account-tab-icon"></i>
-                                    <span class="tab-text">عناويني</span>
-                                    <i data-lucide="chevron-left" class="account-tab-arrow"></i>
-                                </button>
-                            </div>
+                <!-- Settings View (rendered by user-settings.js) -->
+                <div id="profile-settings-view" class="profile-view"></div>
 
-                            <!-- Tab Content Views -->
-                            <div class="account-tab-content">
-                                <!-- البيانات الأساسية View -->
-                                <div id="basic-data-view" class="tab-view">
-                                    <div class="account-card">
-                                        <div class="card-body">
-                                            <!-- Profile Image -->
-                                            <div class="info-row profile-image-row">
-                                                <div class="info-label">
-                                                    <i data-lucide="image" class="info-icon"></i>
-                                                    <span>صورة الملف الشخصي</span>
-                                                </div>
-                                                <div class="info-value profile-image-value">
-                                                    <div class="profile-image-edit">
-                                                        <div class="profile-image" id="basic-data-profile-image">
-                                                            <i class="fas fa-user profile-image-placeholder"></i>
-                                                        </div>
-                                                        <button class="edit-image-btn" type="button">
-                                                            <i data-lucide="camera" class="edit-image-icon"></i>
-                                                        </button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <!-- Full Name -->
-                                            <div class="info-row">
-                                                <div class="info-label">
-                                                    <i data-lucide="user" class="info-icon"></i>
-                                                    <span>الاسم الكامل</span>
-                                                </div>
-                                                <div class="info-value">عبدالله محمد</div>
-                                            </div>
-
-                                            <!-- National ID -->
-                                            <div class="info-row">
-                                                <div class="info-label">
-                                                    <i data-lucide="id-card" class="info-icon"></i>
-                                                    <span>الهوية الوطنية</span>
-                                                </div>
-                                                <div class="info-value">1029384756</div>
-                                            </div>
-
-                                            <!-- Date of Birth -->
-                                            <div class="info-row">
-                                                <div class="info-label">
-                                                    <i data-lucide="calendar" class="info-icon"></i>
-                                                    <span>تاريخ الميلاد</span>
-                                                </div>
-                                                <div class="info-value">01/01/1990</div>
-                                            </div>
-
-                                            <!-- Gender -->
-                                            <div class="info-row">
-                                                <div class="info-label">
-                                                    <i data-lucide="fingerprint-pattern" class="info-icon"></i>
-                                                    <span>الجنس</span>
-                                                </div>
-                                                <div class="info-value">ذكر</div>
-                                            </div>
-
-                                            <!-- Nationality -->
-                                            <div class="info-row">
-                                                <div class="info-label">
-                                                    <i data-lucide="flag" class="info-icon"></i>
-                                                    <span>الجنسية</span>
-                                                </div>
-                                                <div class="info-value">سعودي</div>
-                                            </div>
-
-                                            <!-- Edit Button -->
-                                            <button class="edit-btn">
-                                                <i data-lucide="edit" class="edit-icon"></i>
-                                                <span>تعديل البيانات</span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- معلومات التواصل View -->
-                                <div id="contact-info-view" class="tab-view">
-                                    <div class="account-card">
-                                        <div class="card-body">
-                                            <!-- Email -->
-                                            <div class="info-row">
-                                                <div class="info-label">
-                                                    <i data-lucide="mail" class="info-icon"></i>
-                                                    <span>البريد الإلكتروني</span>
-                                                </div>
-                                                <div class="info-value">abdullahmakingbos@propertyapp.com</div>
-                                            </div>
-
-                                            <!-- Phone -->
-                                            <div class="info-row">
-                                                <div class="info-label">
-                                                    <i data-lucide="phone" class="info-icon"></i>
-                                                    <span>رقم الجوال</span>
-                                                </div>
-                                                <div class="info-value">0557894321</div>
-                                            </div>
-
-                                            <!-- Edit Button -->
-                                            <button class="edit-btn">
-                                                <i data-lucide="edit" class="edit-icon"></i>
-                                                <span>تعديل البيانات</span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- عناويني View -->
-                                <div id="addresses-view" class="tab-view">
-                                    <div class="account-card">
-                                        <div class="card-body">
-                                            <!-- Empty State -->
-                                            <div class="empty-state">
-                                                <i data-lucide="map-pin" class="empty-icon"></i>
-                                                <p class="empty-text">لا توجد عناوين محفوظة</p>
-                                                <button class="add-address-btn">
-                                                    <i data-lucide="plus" class="add-icon"></i>
-                                                    <span>إضافة عنوان جديد</span>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Settings View -->
-                <div id="profile-settings-view" class="profile-view">
-                    <div class="settings-container">
-
-
-                        <!-- Settings Header -->
-                        <div class="account-tabs-header" id="settings-header">
-                            <button class="back-btn" id="settings-back-btn" aria-label="رجوع">
-                                <i data-lucide="arrow-right" class="back-icon"></i>
-                            </button>
-                            <h2 class="account-tabs-title">الإعدادات</h2>
-                        </div>
-
-
-                        <!-- Settings Content -->
-                        <div class="settings-content">
-                            <!-- Description Text -->
-                            <p class="settings-description">
-                                تتيح لك صفحة الإعدادات تخصيص حسابك. يمكنك تعديل معلوماتك، تغيير طريقة ظهورك، وإدارة
-                                تفضيلات الخصوصية.
-                            </p>
-
-                            <!-- Section 1: Appearance in Auctions -->
-                            <div class="settings-section">
-                                <h3 class="settings-section-title">ظهورك في المزادات</h3>
-                                <div class="settings-card">
-                                    <label class="radio-option">
-                                        <input type="radio" name="auction-display" value="last-four-id" checked>
-                                        <span class="radio-label">آخر 4 أرقام من الهوية</span>
-                                        <span class="radio-checkmark"></span>
-                                    </label>
-                                    <label class="radio-option">
-                                        <input type="radio" name="auction-display" value="full-name">
-                                        <span class="radio-label">الاسم الكامل</span>
-                                        <span class="radio-checkmark"></span>
-                                    </label>
-                                    <label class="radio-option">
-                                        <input type="radio" name="auction-display" value="bidder-number">
-                                        <span class="radio-label">رقم المزايد في المزاد</span>
-                                        <span class="radio-checkmark"></span>
-                                    </label>
-                                </div>
-                            </div>
-
-                            <!-- Section 2: Notifications -->
-                            <div class="settings-section">
-                                <h3 class="settings-section-title">الإشعارات</h3>
-                                <div class="settings-card">
-                                    <div class="toggle-option">
-                                        <div class="toggle-label-wrapper">
-                                            <i data-lucide="bell" class="toggle-icon"></i>
-                                            <span class="toggle-label">اشعارات المزايدات</span>
-                                        </div>
-                                        <label class="toggle-switch">
-                                            <input type="checkbox" checked>
-                                            <span class="toggle-slider"></span>
-                                        </label>
-                                    </div>
-                                    <div class="toggle-option">
-                                        <div class="toggle-label-wrapper">
-                                            <i data-lucide="alert-circle" class="toggle-icon"></i>
-                                            <span class="toggle-label">اشعارات التنبيهات</span>
-                                        </div>
-                                        <label class="toggle-switch">
-                                            <input type="checkbox" checked>
-                                            <span class="toggle-slider"></span>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Favorites View -->
-                <div id="profile-favorites-view" class="profile-view">
-                    <div class="favorites-container">
-                        <!-- Favorites Header -->
-                        <div class="account-tabs-header" id="favorites-header">
-                            <button class="back-btn" id="favorites-back-btn" aria-label="رجوع">
-                                <i data-lucide="arrow-right" class="back-icon"></i>
-                            </button>
-                            <h2 class="account-tabs-title">المفضلة</h2>
-                        </div>
-
-                        <!-- Favorites Content -->
-                        <div class="favorites-content">
-                            <div class="favorites-empty-state">
-                                <i data-lucide="heart" class="favorites-icon"></i>
-                                <p class="favorites-empty-text">لم يتم العثور على مزادات</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- Favorites View (rendered by user-fav.js) -->
+                <div id="profile-favorites-view" class="profile-view"></div>
             </div>
         </section>
+
+
+
 
         <!-- My Actions Section: User Participations -->
-        <section id="my-actions-section" class="tab-section">
-            <div class="section-content">
-                <!-- Page Title -->
-                <div class="my-actions-header">
-                    <h1 class="my-actions-title">مشاركاتي</h1>
-                </div>
+        <section id="my-actions-section" class="tab-section"></section>
 
-                <!-- Tab Switching Section -->
-                <div class="my-actions-tabs">
-                    <button class="my-actions-tab active" data-tab="pending" id="pending-tab">
-                        <span>المزادات قيد الانتظار</span>
-                    </button>
-                    <button class="my-actions-tab" data-tab="finished" id="finished-tab">
-                        <span>المزادات المنتهية</span>
-                    </button>
-                </div>
 
-                <!-- Content Area -->
-                <div class="my-actions-content">
-                    <!-- Pending Auctions Content -->
-                    <div class="my-actions-tab-content active" id="pending-content">
-                        <div class="my-actions-empty-state">
-                            <p class="my-actions-empty-text">لا يوجد بيانات لعرضها</p>
-                        </div>
-                    </div>
 
-                    <!-- Finished Auctions Content -->
-                    <div class="my-actions-tab-content" id="finished-content">
-                        <div class="my-actions-empty-state">
-                            <p class="my-actions-empty-text">لا يوجد بيانات لعرضها</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
     </div>
 
 
