--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
 
+    <!-- Install PWA Manifest -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#0b2c4a">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="مزادنا للعقارات السعودية">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="mobile-web-app-title" content="مزادنا للعقارات السعودية">
+    <meta name="msapplication-TileColor" content="#0b2c4a">
+
+
+
     <!-- This file loads all other JavaScript modules from the 'script' folder -->
     <script src="script.js" defer></script>
 
@@ -91,7 +104,7 @@
 
     <div id="app-content">
 
-        
+
         <!-- Home Section: Featured Properties -->
         <section id="home-section" class="tab-section active">
             <div class="section-content">
