--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <i data-lucide="home" class="top-nav-icon"></i>
                 <span class="top-nav-label">الرئيسية</span>
             </a>
-            <a href="#" class="top-nav-item" data-section="sell-section">
+            <a href="#" class="top-nav-item" data-section="buy-section">
                 <i data-lucide="tag" class="top-nav-icon"></i>
                 <span class="top-nav-label">للبيع</span>
             </a>
@@ -119,10 +119,10 @@
                 </div>
 
                 <!-- Sell Cards Section -->
-                <div id="sell-section" class="home-subsection">
+                <div id="buy-section" class="home-subsection">
                     <h2 class="section-title">عقارات للبيع</h2>
                     <div class="horizontal-scroll-container">
-                        <div class="horizontal-scroll-grid" id="home-sell-grid">
+                        <div class="horizontal-scroll-grid" id="home-buy-grid">
                             <!-- Sell cards will be rendered here dynamically -->
                         </div>
                     </div>
@@ -196,7 +196,7 @@
             <i data-lucide="hammer" class="nav-icon"></i>
             <span class="nav-label">المزادات</span>
         </a>
-        <a href="#" class="nav-item" data-section="sell-section">
+        <a href="#" class="nav-item" data-section="buy-section">
             <i data-lucide="tag" class="nav-icon"></i>
             <span class="nav-label">للبيع</span>
         </a>
