--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
         <!-- My Actions Section: User Participations -->
         <section id="my-actions-section" class="tab-section"></section>
 
+        <!-- Property Detail Section -->
+        <section id="property-detail-section" class="tab-section">
+            <div class="section-content">
+                <div id="property-detail-view" class="property-detail-view">
+                    <!-- Content will be rendered dynamically by auction-property-detail.js -->
+                </div>
+            </div>
+        </section>
+
 
 
     </div>
