--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <section id="property-detail-section" class="tab-section">
             <div class="section-content">
                 <div id="property-detail-view" class="property-detail-view">
-                    <!-- Content will be rendered dynamically by auction-property-detail.js -->
+                    <!-- Content will be rendered dynamically by property-deta.js -->
                 </div>
             </div>
         </section>
