--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="section-content">
                 <!-- Auction Cards Section -->
                 <div id="auctions-section" class="home-subsection">
-                    <h2 class="section-title">المزادات المتاحة</h2>
+                    <h2 class="home-page-property-section-title">المزادات المتاحة</h2>
                     <div class="horizontal-scroll-container">
                         <div class="horizontal-scroll-grid" id="home-auctions-grid">
                             <!-- Auction cards will be rendered here dynamically -->
@@ -126,7 +126,7 @@
 
                 <!-- Sell Cards Section -->
                 <div id="buy-section" class="home-subsection">
-                    <h2 class="section-title">عقارات للبيع</h2>
+                    <h2 class="home-page-property-section-title">عقارات للبيع</h2>
                     <div class="horizontal-scroll-container">
                         <div class="horizontal-scroll-grid" id="home-buy-grid">
                             <!-- Sell cards will be rendered here dynamically -->
@@ -136,7 +136,7 @@
 
                 <!-- Rent Cards Section -->
                 <div id="rent-section" class="home-subsection">
-                    <h2 class="section-title">عقارات للإيجار</h2>
+                    <h2 class="home-page-property-section-title">عقارات للإيجار</h2>
                     <div class="horizontal-scroll-container">
                         <div class="horizontal-scroll-grid" id="home-rent-grid">
                             <!-- Rent cards will be rendered here dynamically -->
