--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <meta name="mobile-web-app-title" content="مزادنا للعقارات السعودية">
     <meta name="msapplication-TileColor" content="#0b2c4a">
 
-
+    <!-- PWA Installer - Load early to capture beforeinstallprompt event -->
+    <script src="script/pwa-installer.js"></script>
 
     <!-- This file loads all other JavaScript modules from the 'script' folder -->
     <script src="script.js" defer></script>
