--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <!-- Install PWA Manifest -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#0b2c4a">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -21,8 +21,7 @@
     <meta name="mobile-web-app-title" content="مزادنا للعقارات السعودية">
     <meta name="msapplication-TileColor" content="#0b2c4a">
 
-    <!-- PWA Installer - Load early to capture beforeinstallprompt event -->
-    <script src="script/pwa-installer.js"></script>
+
 
     <!-- This file loads all other JavaScript modules from the 'script' folder -->
     <script src="script.js" defer></script>
