--- a/index.html
+++ b/index.html
@@ -184,6 +184,23 @@
         <!-- My Actions Section: User Participations -->
         <section id="my-actions-section" class="tab-section"></section>
 
+        <!-- Property Detail Section: Auction Property Details -->
+        <section id="property-detail-section" class="tab-section">
+            <div class="settings-container">
+                <!-- Header -->
+                <div id="property-detail-header" class="account-tabs-header" style="display: none;">
+                    <button class="back-to-profile-btn" id="property-detail-back-btn" aria-label="العودة">
+                        <i data-lucide="arrow-right" class="back-icon"></i>
+                    </button>
+                    <h2 class="account-tabs-title">تفاصيل المزاد</h2>
+                </div>
+
+                <!-- Content Container -->
+                <div class="property-detail-container scrollable-container">
+                    <!-- Content will be rendered here by JavaScript -->
+                </div>
+            </div>
+        </section>
 
 
 
