--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <section id="property-detail-section" class="tab-section">
             <div class="settings-container">
                 <!-- Header -->
-                <div id="property-detail-header" class="account-tabs-header" style="display: none;">
+                <div id="auction-property-main-page-detail-header" class="account-tabs-header" style="display: none;">
                     <button class="back-to-profile-btn" id="property-detail-back-btn" aria-label="العودة">
                         <i data-lucide="arrow-right" class="back-icon"></i>
                     </button>
@@ -196,7 +196,7 @@
                 </div>
 
                 <!-- Content Container -->
-                <div class="property-detail-container scrollable-container">
+                <div class="auction-property-main-page-detail-container scrollable-container">
                     <!-- Content will be rendered here by JavaScript -->
                 </div>
             </div>
