--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
         <!-- Home Section: Featured Properties -->
-        <section id="home-section" class="tab-section active">
+        <section id="home-section" class="tab-section active scrollable-container">
 
 
             <!-- Banner Slider -->
