--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
     <div id="app-content">
 
 
+        
         <!-- Home Section: Featured Properties -->
-        <section id="home-section" class="tab-section active scrollable-container">
+        <section id="home-section" class="tab-section active">
 
+            <div id="home-section-container" class="scrollable-container">
 
             <!-- Banner Slider -->
             <section class="banner-section">
@@ -144,6 +146,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </section>
 
 
