--- a/index.html
+++ b/index.html
@@ -75,78 +75,69 @@
     <div id="app-content">
 
 
-        
+
         <!-- Home Section: Featured Properties -->
         <section id="home-section" class="tab-section active">
 
             <div id="home-section-container" class="scrollable-container">
 
-            <!-- Banner Slider -->
-            <section class="banner-section">
-                <div class="banner-slider">
-                    <div class="banner-slide active" data-slide="0">
-                        <div class="banner-overlay"></div>
-                        <div class="banner-content">
-                            <h2>اكتشف عقارات أحلامك</h2>
-                            <p>أفضل العروض العقارية في المملكة العربية السعودية</p>
+                <!-- Banner Slider -->
+                <section class="banner-section">
+                    <div class="banner-slider">
+                        <div class="banner-slide active" data-slide="0">
+                            <div class="banner-overlay"></div>
+                            <div class="banner-content">
+                                <h2>اكتشف عقارات أحلامك</h2>
+                                <p>أفضل العروض العقارية في المملكة العربية السعودية</p>
+                            </div>
+                        </div>
+                        <div class="banner-slide" data-slide="1">
+                            <div class="banner-overlay"></div>
+                            <div class="banner-content">
+                                <h2>مزادات حية مباشرة</h2>
+                                <p>شارك في المزادات الإلكترونية واحصل على أفضل الصفقات</p>
+                            </div>
+                        </div>
+                        <div class="banner-slide" data-slide="2">
+                            <div class="banner-overlay"></div>
+                            <div class="banner-content">
+                                <h2>بيع وإيجار بسهولة</h2>
+                                <p>منصة موثوقة لبيع وإيجار العقارات في جميع أنحاء المملكة</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="banner-slide" data-slide="1">
-                        <div class="banner-overlay"></div>
-                        <div class="banner-content">
-                            <h2>مزادات حية مباشرة</h2>
-                            <p>شارك في المزادات الإلكترونية واحصل على أفضل الصفقات</p>
-                        </div>
+                    <div class="banner-indicators">
+                        <span class="indicator active" data-indicator="0"></span>
+                        <span class="indicator" data-indicator="1"></span>
+                        <span class="indicator" data-indicator="2"></span>
                     </div>
-                    <div class="banner-slide" data-slide="2">
-                        <div class="banner-overlay"></div>
-                        <div class="banner-content">
-                            <h2>بيع وإيجار بسهولة</h2>
-                            <p>منصة موثوقة لبيع وإيجار العقارات في جميع أنحاء المملكة</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="banner-indicators">
-                    <span class="indicator active" data-indicator="0"></span>
-                    <span class="indicator" data-indicator="1"></span>
-                    <span class="indicator" data-indicator="2"></span>
-                </div>
-            </section>
+                </section>
 
 
 
-            <div class="section-content">
-                <!-- Auction Cards Section -->
-                <div id="auctions-section" class="home-subsection">
-                    <h2 class="home-page-property-section-title">المزادات المتاحة</h2>
-                    <div class="horizontal-scroll-container">
-                        <div class="horizontal-scroll-grid" id="home-auctions-grid">
-                            <!-- Auction cards will be rendered here dynamically -->
+                <div class="section-content">
+                    <!-- Auction Cards Section -->
+                    <div id="auctions-section" class="home-subsection">
+                        <h2 class="home-page-property-section-title">المزادات المتاحة</h2>
+                        <div id="home-auctions-grid" class="horizontal-scroll-container">
                         </div>
                     </div>
-                </div>
 
-                <!-- Sell Cards Section -->
-                <div id="buy-section" class="home-subsection">
-                    <h2 class="home-page-property-section-title">عقارات للبيع</h2>
-                    <div class="horizontal-scroll-container">
-                        <div class="horizontal-scroll-grid" id="home-buy-grid">
-                            <!-- Sell cards will be rendered here dynamically -->
+                    <!-- Sell Cards Section -->
+                    <div id="buy-section" class="home-subsection">
+                        <h2 class="home-page-property-section-title">عقارات للبيع</h2>
+                        <div id="home-buy-grid" class="horizontal-scroll-container">
                         </div>
                     </div>
-                </div>
 
-                <!-- Rent Cards Section -->
-                <div id="rent-section" class="home-subsection">
-                    <h2 class="home-page-property-section-title">عقارات للإيجار</h2>
-                    <div class="horizontal-scroll-container">
-                        <div class="horizontal-scroll-grid" id="home-rent-grid">
-                            <!-- Rent cards will be rendered here dynamically -->
+                    <!-- Rent Cards Section -->
+                    <div id="rent-section" class="home-subsection">
+                        <h2 class="home-page-property-section-title">عقارات للإيجار</h2>
+                        <div id="home-rent-grid" class="horizontal-scroll-container">
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
         </section>
 
 
