--- a/index.html
+++ b/index.html
@@ -119,21 +119,30 @@
                     <!-- Auction Cards Section -->
                     <div id="auctions-section" class="home-subsection">
                         <h2 class="home-page-property-section-title">المزادات المتاحة</h2>
-                        <div id="home-auctions-grid" class="horizontal-scroll-container">
+                        <div class="horizontal-scroll-wrapper">
+                            <div id="home-auctions-grid" class="horizontal-scroll-container">
+                            </div>
+                            <div id="home-auctions-indicators" class="scroll-indicators"></div>
                         </div>
                     </div>
 
                     <!-- Sell Cards Section -->
                     <div id="buy-section" class="home-subsection">
                         <h2 class="home-page-property-section-title">عقارات للبيع</h2>
-                        <div id="home-buy-grid" class="horizontal-scroll-container">
+                        <div class="horizontal-scroll-wrapper">
+                            <div id="home-buy-grid" class="horizontal-scroll-container">
+                            </div>
+                            <div id="home-buy-indicators" class="scroll-indicators"></div>
                         </div>
                     </div>
 
                     <!-- Rent Cards Section -->
                     <div id="rent-section" class="home-subsection">
                         <h2 class="home-page-property-section-title">عقارات للإيجار</h2>
-                        <div id="home-rent-grid" class="horizontal-scroll-container">
+                        <div class="horizontal-scroll-wrapper">
+                            <div id="home-rent-grid" class="horizontal-scroll-container">
+                            </div>
+                            <div id="home-rent-indicators" class="scroll-indicators"></div>
                         </div>
                     </div>
                 </div>
